syntax = "proto3";

package corex.proto;

message BodyHolder {
    int32 type = 1;
    bytes body = 2;
}

message RpcRequest {
    int32 id = 1;
    int32 type = 2;
    Method method = 3;
    Auth auth = 4;
    int64 timestamp = 5;
    BodyHolder body = 6;
}

message Method {
    string module = 1;
    string api = 2;
    string version = 3;
}

message Auth {
    int32 type = 1;
    string token = 2;
}

message RpcResponse {
    int32 id = 1;
    string version = 2;
    int32 code = 3;
    string msg = 4;
    int64 timestamp = 5;
    BodyHolder body = 6;
}

message Push {
    string topic = 1;
    int64 timestamp = 2;
    BodyHolder body = 3;
}

message ClientPayload {
    oneof body {
        RpcRequest rpcRequest = 1;
        RpcResponse rpcResponse = 2;
        Push push = 3;
    }
}

// json like object
message Struct {
  map<string, Value> fields = 1;
}

message Value {
  oneof kind {
    int32 int_value = 1;
    int64 long_value = 2;
    double double_value = 3;
    string string_value = 4;
    bool bool_value = 5;
    Struct struct_value = 6;
    ListValue list_value = 7;
  }
}

message ListValue {
  repeated Value values = 1;
}
